k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pagamento
  name: pagamento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagamento
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pagamento
    spec:
      containers:
        - image: 471112887467.dkr.ecr.us-east-1.amazonaws.com/postech-repository:latest
          imagePullPolicy: Always
          name: api-img
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
            initialDelaySeconds: 300
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10

status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pagamento
  name: pagamento
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: pagamento
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pagamento-app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/pagamento"
            backend:
              service:
                name: pagamento
                port:
                  number: 8080
